# BichlegchPlayer

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/zuga/com/bichlegchplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  BichlegchPlayer.cpp  CMakeLists.txt  JNICallback.cpp  JNICallback.h  Log.h  Macro.h  Player.cpp  Player.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h
app/src/main/java/zuga/com/bichlegchplayer/: BichlegchPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/zuga/com/bichlegchplayer/: ExampleUnitTest.java
